--- a/index.html
+++ b/index.html
@@ -674,6 +674,8 @@
     <script async custom-element="amp-auto-ads"
             src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
     </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2680606899061778"
+            crossorigin="anonymous"></script>
 </head>
 <body>
     <amp-auto-ads type="adsense"
