--- a/index.html
+++ b/index.html
@@ -879,7 +879,7 @@
     <div class="top-bar">
         <a href="#" class="logo">Komunitas Kita</a>
         <nav>
-            <a href="https://www.tebakangka.co-id.id" target="_blank" rel="noopener noreferrer"><i class="fas fa-calculator"></i> Tebak Angka</a>
+            <a href="https://tebakangka.duckdns.org/" target="_blank" rel="noopener noreferrer"><i class="fas fa-calculator"></i> Tebak Angka</a>
             <a href="#" id="showRulesButton"><i class="fas fa-gavel"></i> Rules Komunitas</a>
         </nav>
         <div class="theme-toggle-container">
