--- a/index.html
+++ b/index.html
@@ -1150,9 +1150,9 @@
             <div class="footer-section">
                 <h3>Ikuti Kami</h3>
                 <div class="social-icons">
-                    <a href="https://facebook.com/komunitaskita" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.facebook.com/share/1BsHZuCXio/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
                     <a href="https://twitter.com/komunitaskita" target="_blank" aria-label="Twitter"><i class="fab fa-twitter"></i></a>
-                    <a href="https://instagram.com/komunitaskita" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="https://www.instagram.com/knzdi1?igsh=MWxvanU0c2x6Ym94dw==" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
                     <a href="https://t.me/komunitaskita" target="_blank" aria-label="Telegram"><i class="fab fa-telegram-plane"></i></a>
                 </div>
             </div>
