--- a/index.html
+++ b/index.html
@@ -1144,7 +1144,7 @@
                 <ul>
                     <li><a href="#">Beranda</a></li>
                     <li><a href="#" id="footerShowRulesButton">Aturan Komunitas</a></li>
-                    <li><a href="https://www.tebakangka.co-id.id" target="_blank" rel="noopener noreferrer">Tebak Angka</a></li>
+                    <li><a href="https://tebakangka.duckdns.org/" target="_blank" rel="noopener noreferrer">Tebak Angka</a></li>
                 </ul>
             </div>
             <div class="footer-section">
